--- a/login.html
+++ b/login.html
@@ -56,8 +56,10 @@
                 <label for="roundedTwo"></label>
             </div>
 
-            <a href="#" class="cambio-de-pagina">¿No estas registrado?</a>
-
+            <a href="registro.html" class="cambio-de-pagina">¿No estas registrado?</a>
+            <br>
+            <a href="recuperar.html" class="cambio-de-pagina">¿Olvidaste Tu Contraseña?</a>
+<br>
             <input type="submit" class="btnSend" value="Iniciar Sesion" id="btnSend">
 
         </div>
