--- a/recuperar.html
+++ b/recuperar.html
@@ -41,7 +41,7 @@
 
     <form class="form_contact">
 
-        <h1 class="title-form">Recuparar contraseña</h1>
+        <h1 class="title-form">Recuperar contraseña</h1>
 
         <div class="user_info">
 
@@ -56,7 +56,7 @@
                 <label for="roundedTwo"></label>
             </div>
 
-            <a href="#" class="cambio-de-pagina">Iniciar sesion?</a>
+            <a href="login.html" class="cambio-de-pagina">Iniciar sesion?</a>
 
             <input type="submit" class="btnSend" value="Confirmar" id="btnSend">
 
