--- a/registro.html
+++ b/registro.html
@@ -59,7 +59,7 @@
             <input type="password" id="pass" name="pass" required>
 
             <label for="pass"><i class="fas fa-key"></i>Confirmar contraseña</label>
-            <input type="password" id="pass-confi" name="pass-confi" required> 
+            <input type="password" id="pass-confi" name="passconfi" required> 
 
             <div class="roundedTwo">
                 <input type="checkbox" onclick="Toggle()" value="None" id="roundedTwo" name="mostrar contraseña"
