--- a/recuperar.html
+++ b/recuperar.html
@@ -3,7 +3,7 @@
 
 <head>
 
-    <title>Autocaress Orion - Registro</title>
+    <title>Autocaress Orion - Recuperar</title>
     <link rel="icon" href="./img/navicon.png">
 
     <meta charset="UTF-8">
